// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tokenizer should not lose data when pausing 1`] = `
Array [
  Array [
    "ontextentity",
    38,
  ],
  Array [
    "ontext",
    5,
    12,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing script tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    7,
  ],
  Array [
    "onselfclosingtag",
    9,
  ],
  Array [
    "onopentagname",
    11,
    14,
  ],
  Array [
    "onopentagend",
    14,
  ],
  Array [
    "onclosetag",
    17,
    20,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing style tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onselfclosingtag",
    8,
  ],
  Array [
    "onopentagname",
    10,
    13,
  ],
  Array [
    "onopentagend",
    13,
  ],
  Array [
    "onclosetag",
    16,
    19,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support self-closing special tags for self-closing title tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onselfclosingtag",
    8,
  ],
  Array [
    "onopentagname",
    10,
    13,
  ],
  Array [
    "onopentagend",
    13,
  ],
  Array [
    "onclosetag",
    16,
    19,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal script tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    7,
  ],
  Array [
    "onopentagend",
    7,
  ],
  Array [
    "onclosetag",
    10,
    16,
  ],
  Array [
    "onopentagname",
    18,
    21,
  ],
  Array [
    "onopentagend",
    21,
  ],
  Array [
    "onclosetag",
    24,
    27,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal sitle tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onopentagend",
    6,
  ],
  Array [
    "onclosetag",
    9,
    14,
  ],
  Array [
    "onopentagname",
    16,
    19,
  ],
  Array [
    "onopentagend",
    19,
  ],
  Array [
    "onclosetag",
    22,
    25,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal style tag 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    6,
  ],
  Array [
    "onopentagend",
    6,
  ],
  Array [
    "onclosetag",
    9,
    14,
  ],
  Array [
    "onopentagname",
    16,
    19,
  ],
  Array [
    "onopentagend",
    19,
  ],
  Array [
    "onclosetag",
    22,
    25,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal tag with attributes 1`] = `
Array [
  Array [
    "onopentagname",
    1,
    4,
  ],
  Array [
    "onattrib",
    5,
    43,
  ],
  Array [
    "onselfclosingtag",
    44,
  ],
  Array [
    "onend",
  ],
]
`;

exports[`Tokenizer should support standard special tags for normal tag with attributes 2 1`] = `
Array [
  Array [
    "ontext",
    0,
    1,
  ],
  Array [
    "ondeclaration",
    3,
    15,
  ],
  Array [
    "ontext",
    16,
    17,
  ],
  Array [
    "onopentagname",
    18,
    22,
  ],
  Array [
    "onopentagend",
    22,
  ],
  Array [
    "ontext",
    23,
    24,
  ],
  Array [
    "onopentagname",
    25,
    30,
  ],
  Array [
    "onopentagend",
    30,
  ],
  Array [
    "ontext",
    31,
    40,
  ],
  Array [
    "onclosetag",
    42,
    47,
  ],
  Array [
    "ontext",
    48,
    49,
  ],
  Array [
    "onopentagname",
    50,
    54,
  ],
  Array [
    "onattrib",
    55,
    65,
  ],
  Array [
    "onopentagend",
    66,
  ],
  Array [
    "ontext",
    67,
    79,
  ],
  Array [
    "onopentagname",
    80,
    81,
  ],
  Array [
    "onopentagend",
    81,
  ],
  Array [
    "onclosetag",
    84,
    85,
  ],
  Array [
    "onclosetag",
    88,
    92,
  ],
  Array [
    "ontext",
    93,
    94,
  ],
  Array [
    "oncomment",
    98,
    113,
    2,
  ],
  Array [
    "ontext",
    114,
    115,
  ],
  Array [
    "onclosetag",
    117,
    121,
  ],
  Array [
    "onend",
  ],
]
`;
